# docs/swagger.json
@@ -167,6 +167,35 @@
                 }
             }
         },
+        "/getprices": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Show prices of shares",
+                "operationId": "get-prices",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Share"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/getunclosed": {
             "get": {
                 "security": [
@@ -386,7 +415,7 @@
                 "operationId": "create-account",
                 "parameters": [
                     {
-                        "description": "Please fill the login and password fields.",
+                        "description": "Please fill the login (5-20 symbols) and password (minimum 8 symbols) fields.",
                         "name": "input",
                         "in": "body",
                         "required": true,
@@ -526,6 +555,7 @@
             ],
             "properties": {
                 "company": {
+                    "description": "name of company in share",
                     "type": "string"
                 },
                 "dealid": {
@@ -533,9 +563,11 @@
                     "type": "string"
                 },
                 "dealtime": {
+                    "description": "entry time in position",
                     "type": "string"
                 },
                 "purchaseprice": {
+                    "description": "entry price in position",
                     "type": "number"
                 },
                 "sharescount": {
@@ -543,9 +575,22 @@
                     "type": "number"
                 },
                 "stoploss": {
+                    "description": "lower limit where the price can go",
                     "type": "number"
                 },
                 "takeprofit": {
+                    "description": "upper limit where the price can go",
+                    "type": "number"
+                }
+            }
+        },
+        "model.Share": {
+            "type": "object",
+            "properties": {
+                "company": {
+                    "type": "string"
+                },
+                "price": {
                     "type": "number"
                 }
             }
@@ -554,9 +599,11 @@
             "type": "object",
             "properties": {
                 "accesstoken": {
+                    "description": "token that gives access to secure methods",
                     "type": "string"
                 },
                 "refreshtoken": {
+                    "description": "same token as in struct User",
                     "type": "string"
                 }
             }
